# ComfyUI-DownscaleIRN

./: .gitignore  LICENSE  README.md  __init__.py  comfyui_downscale_irn.py  pyproject.toml
.github/workflows/: publish.yml
comfyui_invertible_rescale/: __init__.py  model_registry.json
comfyui_invertible_rescale/irn/: Inv_arch.py  Subnet_constructor.py  module_util.py
comfyui_invertible_rescale/nodes/: irn_downscale.py
comfyui_invertible_rescale/utils/: gdrive.py
